# quartermaster

./: .gitignore  Pipfile  TODO.md  config.ini.example  docker-compose.yml  example.env  local_requirements.txt  pyproject.toml  pytest.ini  readme.md
client/quartermaster_client/: __main__.py
deploy/: Dockerfile-backend  Dockerfile-frontend  build_docker_images.sh  gunicorn_config.py  nginx.conf
drivers/VirtualHere/: readme.md
plugins/USB_Quartermaster_SSH/: communicator.py
plugins/USB_Quartermaster_Usbip/: __init__.py  driver.py  tests.py
plugins/USB_Quartermaster_VirtualHere/: __init__.py  driver.py  tasks.py
plugins/USB_Quartermaster_common/: Communicator.py  Driver.py  Exceptions.py  README.md  __init__.py  plugins.py  util.py
quartermaster_server/: conftest.py  manage.py
quartermaster_server/SSH/: __init__.py  apps.py  communicator.py
quartermaster_server/Teamcity/: apps.py  config.py  conftest.py  models.py  tasks.py  tc_allocator.py  test_tc_allocator.py  test_views.py  urls.py  views.py
quartermaster_server/UsbipOverSSH/: __init__.py  apps.py  config.py  driver.py  tests.py
quartermaster_server/VirtualHere/: __init__.py  apps.py  driver.py  tasks.py
quartermaster_server/VirtualHereOverSSH/: __init__.py  apps.py  driver.py  tasks.py
quartermaster_server/api/: tests.py  urls.py  urls_v1.py  views.py
quartermaster_server/ci_teamcity/: apps.py  config.py  tasks.py  tc_allocator.py  tests.py  urls.py  views.py
quartermaster_server/client/: readme.md  tests.py  urls.py  views.py
quartermaster_server/data/: models.py  (+2 more)
test/: Vagrantfile
(+81 files in other folders)
